--- a/Proyecto_Bootstrap/indexCDN.html
+++ b/Proyecto_Bootstrap/indexCDN.html
@@ -36,8 +36,8 @@
                     <div class="col-md-12 col-lg-12 d-flex justify-content-center">
                         <ul class="navbarlist">                        
                             <li><a href="indexCDN.html" title="Inicio">Inicio</a></li>
-                            <li><a href="../Paginas/nosotros.html" title="Nosotros">Nosotros</a></li> 
-                            <li><a href="../Paginas/catalogo.html" title="Catalogo">Catalogo</a></li>                                    
+                            <li><a href="../Proyecto_Bootstrap/Paginas/nosotros.html" title="Nosotros">Nosotros</a></li> 
+                            <li><a href="../Proyecto_Bootstrap/Paginas/catalogo.html" title="Catalogo">Catalogo</a></li>                                    
                             <li><a href="../Paginas/contacto.html" title="Contacto">Contacto</a></li>                           
                         </ul>
                     </div>
