Aplicando Nesting y Variables

--- a/Proyecto_SASS I/indexCDN.html
+++ b/Proyecto_SASS I/indexCDN.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Electricidad Mendez</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body id="grid-container">
     
@@ -36,9 +36,9 @@
                     <div class="col-md-12 col-lg-12 d-flex justify-content-center">
                         <ul class="navbarlist">                        
                             <li><a href="indexCDN.html" title="Inicio">Inicio</a></li>
-                            <li><a href="../Proyecto_Bootstrap/Paginas/nosotros.html" title="Nosotros">Nosotros</a></li> 
-                            <li><a href="../Proyecto_Bootstrap/Paginas/catalogo.html" title="Catalogo">Catalogo</a></li>                                    
-                            <li><a href="../Paginas/contacto.html" title="Contacto">Contacto</a></li>                           
+                            <li><a href="Paginas/nosotros.html" title="Nosotros">Nosotros</a></li> 
+                            <li><a href="Paginas/catalogo.html" title="Catalogo">Catalogo</a></li>                                    
+                            <li><a href="Paginas/contacto.html" title="Contacto">Contacto</a></li>                           
                         </ul>
                     </div>
                 </div>
